Fix mobile submenu alignment and styling

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -197,6 +197,20 @@
 }
 
 #header-mobile .menu .menu-item.sub-menu-item {
-  padding-left: 2rem;
-  font-size: 0.95rem;
+  padding-left: 0;
+  font-size: 0.92em;
+  opacity: 0.8;
+}
+
+#header-mobile .menu .menu-item.sub-menu-item::before {
+  content: "\2022";
+  display: inline-block;
+  margin-right: 0.45rem;
+  font-size: 0.75em;
+  opacity: 0.75;
+}
+
+#header-mobile .menu .menu-item.sub-menu-item:hover,
+#header-mobile .menu .menu-item.sub-menu-item:focus {
+  opacity: 1;
 }
